# mpipool

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: black.yml  build.yml  docs.yml  isort.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst  mpipool.rst  zwembad.rst
examples/: error.py  example.py  squares.py
mpipool/: __init__.py  _futures.py  _multiprocessing.py  exceptions.py  mpipool.py
tests/: test_error_handling.py  test_futures.py  test_multiprocessing.py
zwembad/: __init__.py  pool.py
